--- a/src/styles/base/mixins/media-queries.less
+++ b/src/styles/base/mixins/media-queries.less
@@ -69,6 +69,7 @@
 // Extra-large
 
 @x-large-up: ~"(min-width: @{breakpoint-x-large-min})";
+@x-large-only: ~"(min-width: @{breakpoint-x-large-min})";
 
 // Retina
 
