--- a/src/styles/utilities/utility-classes.less
+++ b/src/styles/utilities/utility-classes.less
@@ -4,11 +4,15 @@
 .use-utility-classes(@boolean) when (@boolean =true) {
 
     .u-border-none {
-        border: none!important
+        border: none !important
     }
 
     .u-border-radius-none {
-        border-radius: 0!important
+        border-radius: 0 !important
+    }
+
+    .u-border-radius-circle {
+        border-radius: 50% !important
     }
 
     .u-centered {
@@ -16,8 +20,8 @@
     }
 
     .u-margin-centered {
-        margin-left: auto!important;
-        margin-right: auto!important;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
 
     .u-full-height {
@@ -43,8 +47,8 @@
     }
 
     .u-avoid-page-break {
-        page-break-inside: avoid!important;
-        break-inside: avoid!important;
+        page-break-inside: avoid !important;
+        break-inside: avoid !important;
     }
 }
 
