--- a/src/styles/base/mixins/font-face.less
+++ b/src/styles/base/mixins/font-face.less
@@ -4,9 +4,10 @@
 
 .font-face (@fontname, @fontfile, @weight: normal, @style: normal) {
     font-family: '@{fontname}';
-    src: url('../../../fonts/@{fontfile}.woff2') format('woff2'), /* Chrome 36+, Firefox 35+ */
-    url('../../../fonts/@{fontfile}.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    url('../../../fonts/@{fontfile}.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('../../../fonts/@{fontfile}.woff2') format('woff2'),
+    url('../../../fonts/@{fontfile}.woff') format('woff'),
+    url('../../../fonts/@{fontfile}.ttf') format('truetype');
     font-weight: @weight;
     font-style: @style;
+    font-display: swap;
 }
