move some color variables under mixins

--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -7,6 +7,7 @@
 @import "mixins/button";
 @import "mixins/center";
 @import "mixins/clearfix";
+@import "mixins/color-variables";
 @import "mixins/cover";
 @import "mixins/fluid-value";
 @import "mixins/font-face";
