--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -90,7 +90,7 @@
 @root-font-size:                        16px;
 @base-line:                             24px;
 
-@base-font-family:                      Moderat, sans-serif;
+@base-font-family:                      sans-serif;
 @base-font-size:                        @root-font-size;
 @base-letter-spacing:                   @letter-spacing-base;
 
