add more utility font-weights

--- a/src/styles/utilities/text-weight.less
+++ b/src/styles/utilities/text-weight.less
@@ -11,12 +11,20 @@
         font-weight: 400 !important;
     }
 
+    .u-text-medium {
+        font-weight: 500 !important;
+    }
+
     .u-text-semibold {
         font-weight: 600 !important;
     }
 
     .u-text-bold {
         font-weight: 700 !important;
+    }
+
+    .u-text-extra-bold {
+        font-weight: 800 !important;
     }
 
     .u-text-black {
