--- a/src/styles/base/embedded-content.less
+++ b/src/styles/base/embedded-content.less
@@ -31,12 +31,9 @@
     }
 
     figure {
-        margin: 0 0 @spacing-base 0;
+        margin-bottom: 0 0 @spacing-base;
     }
-    // Set <img> elements as block-level inside <figure> elements.
-    figure > img {
-        display: block;
-    }
+
 }
 
 .embed-content(@use-embed-content);
