--- a/src/styles/objects/media.less
+++ b/src/styles/objects/media.less
@@ -10,7 +10,7 @@
 
     .media {
         .aspect-ratio-container();
-        background: transparent;
+        background: @media-background;
         iframe,
         object,
         embed,
