--- a/src/styles/base/resets.less
+++ b/src/styles/base/resets.less
@@ -6,21 +6,18 @@
     //
     // Display definitions
 
-    // Add the correct display in IE 9-.
-    // 1. Add the correct display in Edge, IE, and Firefox.
-    // 2. Add the correct display in IE.
+    // Shim for "new" HTML5 structural elements to display correctly (IE10, older browsers)
+    // TODO: remove in next version
     article,
     aside,
-    details, // 1
     figcaption,
     figure,
     footer,
     header,
-    main, // 2
-    menu,
+    hgroup,
+    main,
     nav,
-    section,
-    summary { // 1
+    section {
         display: block;
     }
 
@@ -40,7 +37,8 @@
 
     // Add the correct display in IE 10-.
     // 1. Add the correct display in IE.
-    template, // 1
+    template,
+    // 1
     [hidden] {
         display: none;
     }
@@ -171,9 +169,11 @@
         position: relative;
         vertical-align: baseline;
     }
+
     sub {
         bottom: -.25em;
     }
+
     sup {
         top: -.5em;
     }
@@ -261,14 +261,16 @@
     //* Correct the overflow in IE.
     // 1. Correct the overflow in Edge.
     button,
-    input { // 1
+    input {
+        // 1
         overflow: visible;
     }
 
     // Remove the inheritance in Edge, Firefox, and IE.
     // 1. Remove the inheritance in Firefox.
     button,
-    select { // 1
+    select {
+        // 1
         text-transform: none;
     }
 
@@ -276,7 +278,8 @@
     // controls in Android 4.
     // 2. Correct the inability to style clickable types in iOS and Safari.
     button,
-    html [type="button"], // 1
+    html [type="button"],
+    // 1
     [type="reset"],
     [type="submit"] {
         -webkit-appearance: button; // 2
@@ -386,6 +389,7 @@
         display: inherit;
         position: absolute;
     }
+
     [hidden][aria-hidden="false"]:focus {
         clip: auto;
     }
