--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -361,6 +361,7 @@
 // Use table styles via classes: .table, .table--striped,
 // .table--bordered, .table--highlight & .table-responsive
 
+@table-font-family:                     @base-font-family;
 @table-font-size:                       @base-font-size - 2;
 @table-background:                      transparent;
 @table-caption-padding:                 0 0 @spacing-half;
