--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -168,7 +168,7 @@
         -webkit-appearance: none;
         appearance: none;
         cursor: pointer;
-        background-image: url('../../images/icons/select.svg');
+        background-image: data-uri('image/svg+xml;charset=UTF-8', '../../images/icons/select.svg');
         background-position: right center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -190,7 +190,7 @@
 
         &:hover,
         &:focus {
-            background-image: url('../../images/icons/select_hover.svg');
+        background-image: data-uri('image/svg+xml;charset=UTF-8', '../../images/icons/select_hover.svg');
         }
     }
 
