--- a/src/styles/objects/nav-responsive.less
+++ b/src/styles/objects/nav-responsive.less
@@ -23,12 +23,12 @@
                 }
             }
 
-            .nav-open {
+            .menu-open {
                 overflow: hidden !important;
                 height: 100% !important
             }
 
-            .subnav-open {
+            .submenu-open {
                 overflow: hidden !important;
                 height: 100% !important
             }
@@ -87,14 +87,14 @@
             }
 
             @media @nav-responsive-down {
-                .nav-open {
+                .menu-open {
                     overflow: hidden !important;
                     height: 100% !important
                 }
             }
 
             @media @nav-responsive-up {
-                .subnav-open {
+                .submenu-open {
                     overflow: hidden !important;
                     height: 100% !important
                 }
