font-display optional for FOIT

--- a/src/styles/base/mixins/font-face.less
+++ b/src/styles/base/mixins/font-face.less
@@ -9,5 +9,5 @@
     url('../../../fonts/@{fontfile}.ttf') format('truetype');
     font-weight: @weight;
     font-style: @style;
-    font-display: swap;
+    font-display: optional;
 }
