--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -156,20 +156,25 @@
 @heading6-font-size-small:              round(@base-font-size * 1);
 
 //Display headings
-@display1-font-size:                    round(@base-font-size * 6);
-@display2-font-size:                    round(@base-font-size * 4);
-@display3-font-size:                    round(@base-font-size * 2.5);
-@display4-font-size:                    round(@base-font-size * 1.75);
-
-@display1-font-size-small:              round(@base-font-size * 5);
-@display2-font-size-small:              round(@base-font-size * 3);
-@display3-font-size-small:              round(@base-font-size * 2);
-@display4-font-size-small:              round(@base-font-size * 1.5);
-
+@display1-font-family:                  @heading-font-family;
 @display1-font-weight:                  400;
+@display1-font-size:                    round(@base-font-size * 6);
+@display1-font-size-small:              round(@base-font-size * 5);
+
+@display2-font-family:                  @heading-font-family;
 @display2-font-weight:                  400;
+@display2-font-size:                    round(@base-font-size * 4);
+@display2-font-size-small:              round(@base-font-size * 3);
+
+@display3-font-family:                  @heading-font-family;
 @display3-font-weight:                  400;
+@display3-font-size:                    round(@base-font-size * 2.5);
+@display3-font-size-small:              round(@base-font-size * 1.5);
+
+@display4-font-family:                  @heading-font-family;
 @display4-font-weight:                  400;
+@display4-font-size:                    round(@base-font-size * 1.75);
+@display4-font-size-small:              round(@base-font-size * 2);
 
 // Lead paragraph styles
 @lead-font-family:                      inherit;
